Added logic to make a call to Third Part API

--- a/maersk-container-bookings/src/main/resources/application.properties
+++ b/maersk-container-bookings/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+maersk.booking.container.count=6
+maersk.booking.api.hostname=maersk.com
+maersk.booking.api.protocal=https
+maersk.booking.api.contextPath=api/bookings/checkAvailable
