--- a/maersk-container-bookings/src/main/resources/application.properties
+++ b/maersk-container-bookings/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-maersk.booking.container.count=6
+maersk.booking.api.count=6
 maersk.booking.api.hostname=maersk.com
 maersk.booking.api.protocal=https
 maersk.booking.api.contextPath=api/bookings/checkAvailable
+spring.datasource.continue-on-error=true
