--- a/maersk-container-bookings/src/main/resources/application.yml
+++ b/maersk-container-bookings/src/main/resources/application.yml
@@ -12,6 +12,6 @@ spring:
   application:
     name: maersk-container-bookings
   data:    cassandra:      keyspace-name: maersk
-      contact-points: localhost      port: 9042
+      contact-points: 127.0.0.1      port: 9042
       local-datacenter: datacenter1
       schema-action: CREATE_IF_NOT_EXISTS
